src/test/testFiles/invalid/semanticErrors/invalidForLoopRange.manimdsl
let x = 0;
for (i in range('a', false)) {
    x = x + i;
}
